--- a/.github/workflows/ciao.yml
+++ b/.github/workflows/ciao.yml
@@ -5,6 +5,12 @@ jobs:
   ciao:
     runs-on: ubuntu-latest
     steps:
+      - name: Set up JDK for x64
+        # https://github.com/actions/setup-java
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21.0.3'
+          distribution: 'temurin'
       - run: mvn -v
       - uses: actions/checkout@v4
       - run: |
@@ -15,6 +21,12 @@ jobs:
   verifica-cartella:
     runs-on: ubuntu-latest
     steps:
+      - name: Set up JDK for x64
+        # https://github.com/actions/setup-java
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21.0.3'
+          distribution: 'temurin'
       - run: mvn -v
       - uses: actions/checkout@v4
       - run: |
