--- a/.github/workflows/ciao.yml
+++ b/.github/workflows/ciao.yml
@@ -32,3 +32,4 @@ jobs:
       - run: |
           ls -la
       - run: echo "verifica cartella"
+      - run: java -cp target/my-app-1.0-SNAPSHOT.jar com.mycompany.app.App
