--- a/.github/workflows/ciao.yml
+++ b/.github/workflows/ciao.yml
@@ -14,12 +14,20 @@ jobs:
           distribution: 'temurin'
       - run: mvn -v
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - run: |
           ls -la
           cd javademo/my-app
           mvn install
       - run: mvn test
         working-directory: javademo/my-app
+      - name: Build and analyze
+        working-directory: javademo/my-app
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=marinoski_myfit
       - run: java -cp target/my-app-1.0-SNAPSHOT.jar com.mycompany.app.App
         working-directory: javademo/my-app
       - uses: actions/upload-artifact@v4
