--- a/javademo/my-app/pom.xml
+++ b/javademo/my-app/pom.xml
@@ -28,6 +28,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-json-org</artifactId>
+      <version>2.17.2</version>
+    </dependency>
   </dependencies>
 
   <build>
